Update to next Quarkus LTS version 3.27.1
Signed-off-by: Michael Edgar <medgar@redhat.com>